# lua_egpkg

./: .gitmodules  CMakeLists.txt  CMakeSettings.json  readme.md
src/: CMakeLists.txt  array.c  array.h  double_vec.cpp  double_vec.hpp  egpkg.c  egpkg.h  egpkg_usage.lua  mafematikz.c  mafematikz.h  run_example.bat  stateful.c  stateful.h  sztryng.c  sztryng.h
